client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # name of deployment
  name: client-depl
spec:
  # number of pods
  replicas: 1
  # Hey deployment, take a look at pods
  selector:
    # with the label `client`
    matchLabels:
      # `app` here is nothing to do here, can be any key value pair
      app: client
  # exact config for pod
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: naingaungphyo/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  #type: ClusterIP #optional, default will be ClusterIP
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
