comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # name of deployment
  name: comments-depl
spec:
  # number of pods
  replicas: 1
  # Hey deployment, take a look at pods
  selector:
    # with the label `comments`
    matchLabels:
      # `app` here is nothing to do here, can be any key value pair
      app: comments
  # exact config for pod
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: naingaungphyo/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  #type: ClusterIP #optional, default will be ClusterIP
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
